--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
             "email": "bduringer@yahoo.com.br"
         }
     ],
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
     "config": {
         "process-timeout": 0
     }
